--- a/index.html
+++ b/index.html
@@ -20,44 +20,55 @@
         <div class="main-header">
             <div class="start-date">
                 <h1>Start Date</h1>
-                <div class="date-picker">
-                    <label for="date">
-                        <input id="start"><button class="first" data-i="0"><i
-                                class="fa-solid fa-calendar-days"></i></button>
-                    </label>
-                    <div id="show_error"></div>
+                <div class="date-btn">
+                    <div class="date-picker">
+                        <label for="date">
+                            <input id="start"><button class="first"><i class="fa-solid fa-calendar-days"
+                                    id="btn-icon"></i></button>
+                        </label>
+                        <div id="show_error"></div>
+                    </div>
+                    <button class="ancher" id="today-btn" onclick="setStartDate(this)">
+                        <p>Today</p>
+                    </button>
                 </div>
-                <button class="ancher" id="today-btn" onclick="setStartDate(this)">
-                    <p>Today</p>
-                </button>
             </div>
             <div class="end-date">
                 <h1>End Date</h1>
-                <div class="date-picker">
-                    <label for="date">
-                        <input id="end">
-                    </label><button class="first" data-i="1"><i class="fa-solid fa-calendar-days"></i></button>
-                    <div id="show_error1"></div>
+                <div class="date-btn">
+                    <div class="date-picker">
+                        <label for="date">
+                            <input id="end">
+                        </label><button class="first" id="btn-icon1"><i class="fa-solid fa-calendar-days"></i></button>
+                        <div id="show_error1"></div>
+                    </div>
+                    <button class="ancher" id="today-btn1" onclick="setEndDate(this)">
+                        <p>Today</p>
+                    </button>
                 </div>
-                <button class="ancher" id="today-btn1" onclick="setEndDate(this)">
-                    <p>Today</p>
-                </button>
             </div>
-            <div class="button-btn">
+        </div>
+        <div class="chackbox">
+            <input type="checkbox" id="checkbox">
+            <p class="input-text">Include end date in calculation(1 day is added)</p>
+        </div>
+        <div class="button-btn">
+            <div class="first-btn">
                 <div id="click">
                     <input type="submit" class="btn1" value="Calculate Duration">
-                    <div id="output"></div>
                 </div>
-
+                <div id="output"></div>
+            </div>
+            <div class="first-btn">
                 <div id="btn-btn">
                     <input type="submit" class="btn" value="Count Only Workdays">
-                    <div id="poutput"></div>
                 </div>
+                <div id="poutput"></div>
             </div>
         </div>
     </div>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="./style.js"></script>
 </body>
