changes in datepicker

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                 <div class="date-btn">
                     <div class="date-picker">
                         <label for="date">
-                            <input id="start"><button class="first"><i class="fa-solid fa-calendar-days"
-                                    id="btn-icon"></i></button>
+                            <input id="start" autocomplete="off">
+                            <button class="first">
+                                <i class="fa-solid fa-calendar-days" id="btn-icon"></i>
+                            </button>
                         </label>
                         <div id="show_error"></div>
                     </div>
@@ -38,7 +40,7 @@
                 <div class="date-btn">
                     <div class="date-picker">
                         <label for="date">
-                            <input id="end">
+                            <input id="end" autocomplete="off">
                         </label><button class="first" id="btn-icon1"><i class="fa-solid fa-calendar-days"></i></button>
                         <div id="show_error1"></div>
                     </div>
