change file name and create reset button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div id="click">
                     <input type="submit" class="btn1" value="Calculate Duration">
                 </div>
-                <div id="output"></div>
+                <span id="output"></span>
             </div>
             <div class="first-btn">
                 <div id="btn-btn">
@@ -68,11 +68,14 @@
                 <div id="poutput"></div>
             </div>
         </div>
+        <div id="reset-btn">
+            <input type="submit" class="reset-btn" value="Reset Every Thing">
+        </div>
     </div>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="./style.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
